--- a/proj.html
+++ b/proj.html
@@ -15,7 +15,7 @@
             <li><a href="">Team</a></li>
         </ul>
     </nav>
-    <div class="main">
+    <div class="content">
         <div class="proj">
             <h3>Study Life</h3>
             <h4>Progresso : Em andamento</h4>
