--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
     <div class="main">
         <h2>Login</h2>
-        <form id="login">
+        <form id="login" action="submit">
             <input type="email" id="name">
             <input type="password" id="password">
             <button id="submit">Entrar</button>
