--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main">
         <h2>Login</h2>
         <form id="login" action="submit">
-            <input type="email" id="name">
+            <input type="email" id="email">
             <input type="password" id="password">
             <button id="submit">Entrar</button>
         </form>
@@ -28,5 +28,6 @@
     };
     firebase.initializeApp(config);
     </script>
+    <script src="js/authentication.js"></script>
     </body>
 </html>
