--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     </head>
     <body>
     <div class="main">
-        <h2>Login</h2>
-        <form id="login" action="submit">
-            <input type="email" id="email">
-            <input type="password" id="password">
+        <form id="login">
+            <h2>Acesse sua conta</h2>
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Email" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Password" required>
             <button id="submit">Entrar</button>
         </form>
     </div>
