--- a/team.html
+++ b/team.html
@@ -5,18 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Projects</title>
+    <title>Home</title>
 </head>
 <body>
     <nav>
         <ul id="menu">
             <li id="user"></li>
-            <li><a href="team.html">Equipe</a></li>
-            <li class="active"><a href="proj.html">Projetos</a></li>
+            <li class="active"><a href="team.html">Equipe</a></li>
+            <li><a href="proj.html">Projetos</a></li>
             <li><a href="">Registro de Atividade</a></li>
         </ul>
     </nav>
-    <div class="content"></div>
+    <div class="content">
+        <table id="users">
+            <tr><th>Nome</th><th>Integração</th><th>Projetos</th></tr>
+        </table>
+        <!-- <ul id="users">
+            <li>
+                Alan Santos
+            </li>
+        </ul> -->
+    </div>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
     <script>
         // Initialize Firebase
@@ -30,6 +39,6 @@
         };
         firebase.initializeApp(config);
     </script>
-    <script src="js/proj.js"></script>
+    <script src="js/team.js"></script>
 </body>
 </html>
